# live-swe-agent.github.io

./: .gitignore  Makefile  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  static.yml
content/: about.md
css/: components.css  core.css  filters.css  layout.css  sidebar.css
data/: leaderboards.yaml
js/: dark-mode.js  filters.js  footnotes.js  leaderboard.js  multiselect-dropdown.js  sidebar.js
templates/: base.html  index.html
